# sudoku

./: .gitignore  pyproject.toml
doc/sudokupy.mindnode/: contents.xml  viewState.plist
src/: .gitignore  board1  board2  dn_2024-06-11_hard.sudoku  main.py  sudoku.kv  sudoku.py  sudokuGUI.py  sudokuWidgets.py  sudokuboard.py  sudokuutils.py  sudokuwidgets.py  utils.py  widgets.py
src/sudoku/: sudokuboard.py  utils.py  widgets.py
src_kivy/: Session.vim  TODO  check_validity.py  environment_variables  example-grids.py  loop_main.py  main.py  old-stuff_sudoku-algorithm1.py  setup_kivy_config.py  signal_handler_test.py  solver.py  solver_ipython_demo.py  sudoku-algorithm-1.py  sudoku-algorithm1.py  sudoku.kv  sudoku.py  sudoku_algorithm_1.py  timer-test-2.py  timer-test-3.py  timer-test-4.py  timer-test.py  utils.py
src_kivy/.kivy/: config.ini
src_kivy/data/: 2024-08-19_17.13.00.sudoku  2024-08-19_17.56.00.sudoku  2024-08-19_18.00.54.sudoku  2024-08-19_18.06.47.sudoku  2024-08-19_23.45.17.sudoku  2024-08-20_13.29.00.sudoku  2024-08-20_13.34.14.sudoku  2024-08-20_13.36.28.sudoku  2024-08-20_14.03.23.sudoku  2024-08-20_14.14.22.sudoku  2024-08-20_19.12.19.sudoku  2024-08-20_20.15.36.sudoku  2024-08-20_20.15.54.sudoku  2024-08-20_20.16.08.sudoku  2024-08-20_20.16.18.sudoku  2024-08-20_20.17.32.sudoku  2024-08-23_14.03.31.sudoku  2024-08-25_12.49.14.sudoku  2024-08-25_12.49.52.sudoku  2024-10-11_hard.sudoku  2024-10-11_hard_149.py  2024-10-11_hard_149.sudoku  2024-10-22_easy  2024-10-23_hard_164  2024-10-23_hard_167  DN_2024-08-20.csv  DN_2024-08-24_extrahard.sudoku  (+1 more)
(+12 files in other folders)
