[tool.poetry]
package-mode = false
name = "sudoku"
version = "0.1.0"
description = "sudoku stuff"
authors = ["mier <mier@tanglewreck.mier.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
